test_suite/tests/ui/struct.stderr
error: expected `fn`
 --> tests/ui/struct.rs:4:1
  |
4 | struct Foo {
  | ^^^^^^
